made some new stuff
dwdawdwa

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="topnav">
         <a href="index.html">Main page</a>
-        <a href="index2.html">Cast information </a>
-        <a href="index3.html">Gallery</a>
-        <a href="index4.html">Move information</a>
+        <a href="index2.html">Info</a>
+        <a href="index3.html">cast</a>
+        <a href="index4.html">More</a>
         <a href="index.html" style="float:right">Front page</a>
     </div>
 
