--- a/index.html
+++ b/index.html
@@ -5,43 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>WALL-E Homepage</title>
     <link rel="stylesheet" type href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="topnav">
-        <a href="index.html">Main page</a>
-        <a href="index2.html">Info</a>
-        <a href="index3.html">cast</a>
-        <a href="index4.html">More</a>
-        <a href="index.html" style="float:right">Front page</a>
-    </div>
-
-
-    <h2>Bottom Modal</h2>
-
-    <!--<button id="myBtn" onclick="myFunction()">Open Modal</button> -->
-
-    <div id="myModal" class="modal">
-
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="close">&times;</span>
-                <h2>Modal Header</h2>
-            </div>
-            <div class="modal-body">
-                <p>Some text in the Modal Body</p>
-                <p>Some other text...</p>
-            </div>
-            <div class="modal-footer">
-                <h3>Modal Footer</h3>
-            </div>
+<div class="container">
+        <div class="topnav">
+                <a href="index.html">HOME</a>
+                <a href="index2.html">INFO</a>
+                <a href="index3.html">CAST</a>
+                <a href="index4.html">MORE</a>
         </div>
-
     </div>
-
-    <script src="js.js"></script>
 </body>
 
 </html>
