--- a/index4.html
+++ b/index4.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet"  href="style.css">
+    <title>WALL-E Homepage</title>
+    <link rel="stylesheet" type href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="topnav">
-        <a href="index.html">Main page</a>
-        <a href="index2.html">Cast information </a>
-        <a href="index3.html">Gallery</a>
-        <a href="index4.html">Move information</a>
-        <a href="index.html" style="float:right">Front page</a>
+<div class="container2">
+        <div class="topnav2">
+                <a href="index.html">HOME</a>
+                <a href="index2.html">INFO</a>
+                <a href="index3.html">CAST</a>
+                <a href="index4.html">MORE</a>
+        </div>
     </div>
-
-    <script src="intex.js"></script>
 </body>
 
 </html>
