--- a/index2.html
+++ b/index2.html
@@ -12,13 +12,28 @@
 
 <body>
 <div class="container2">
-        <div class="topnav2">
-                <a href="index.html">HOME</a>
-                <a href="index2.html">INFO</a>
-                <a href="index3.html">CAST</a>
-                <a href="index4.html">MORE</a>
+    <div class="story">
+        <h3 class="story-h1">STORY</h3>
+        <div class="story-txt">What if mankind had to leave Earth and somebody forgot to turn the last robot off?
+                After hundreds of years doing what he was built for, WALL•E discovers a new purpose in life when he meets a sleek search robot named EVE.
+                EVE comes to realize that WALL•E has inadvertently stumbled upon the key to the planet's future, and races back to space to report to the humans.
+                Meanwhile, WALL•E chases EVE across the galaxy and sets into motion one of the most imaginative adventures ever brought to the big screen.
         </div>
     </div>
+    <div>
+    <div class="topnav4">
+            <a href="index.html">HOME</a>
+            <a href="index2.html">INFO</a>
+            <a href="index3.html">CAST</a>
+            <a href="index4.html">MORE</a>
+    </div>
+    <div class="making">
+        <h4 class="about-h1">MAKING THE MOVIE</h4>
+        <img src="images/gal.png"/>
+
+    </div>
+</div>
+</div>
 </body>
 
 </html>
