--- a/index3.html
+++ b/index3.html
@@ -12,12 +12,45 @@
 
 <body>
 <div class="container2">
-        <div class="topnav2">
-                <a href="index.html">HOME</a>
-                <a href="index2.html">INFO</a>
-                <a href="index3.html">CAST</a>
-                <a href="index4.html">MORE</a>
-        </div>
+    <div>
+    <div class="ben">
+        <img src="images/ben.png" class="actor"/>
+        <div>
+            <h6 class="ben-h5">Ben Burtt<br>
+                    Voice of WALL-E</h6>
+        <div class="ben-txt">Ben Burtt was born in New York 1948. He has been in movies like Star Trek, Pixar movies and Star Wars. He is an editor and works on sound in movies.
+                In WALL-E he was the sound designer for the movie and he made WALL-Es voice.</div>
+    </div>
+</div>
+
+    <div class="elissa">
+            <img src="images/elissa.png" class="actor"/>
+            <div>
+            <h6 class="elissa-h5">Elissa Knight <br>Voice of EVE</h6>
+        <div class="elissa-txt">Her voice work on WALL-E only consisted of a few words and sounds. Elissas voice work was originally intended to help the animators during production before a well-known actor recorded the dialogue. 
+                The director liked her performance so much he decided to use it in the finished film.</div>
+    </div>
+</div>
+    </div>
+
+    <div>
+    <div class="topnav2">
+        <a href="index.html">HOME</a>
+        <a href="index2.html">INFO</a>
+        <a href="index3.html">CAST</a>
+        <a href="index4.html">MORE</a>
+    </div>
+                            <div class="andrew">
+                                    <img src="images/Andrew.png" class="actor"/>
+                                    <div>
+                                    <h6 class="andrew-h3">Andrew Stanton<br>
+                                            Director and writer of WALL-E</h6>
+                                <div class="andrew-txt">He wrote the story for the film with Pete Docter.
+                                        They first started to write the story for WALL-E in 1995 but didn't know how  to develop the story so they turned their attention to other projects.
+                                        In 2002 they picked it up again and finished the movie in 2008.</div>
+                            </div>
+                        </div>
+    </div>
     </div>
 </body>
 
