--- a/index4.html
+++ b/index4.html
@@ -12,12 +12,26 @@
 
 <body>
 <div class="container2">
-        <div class="topnav2">
+        <div class="about">
+                <h3 class="about-h1">ABOUT THE FILM</h3>
+                <div class="about-txt">Wall-e is a computer-animated science fiction movie produced by pixar animation studio on 2008.
+                        Wall-e was released in US on june 2008, it grossed 533mil worldwide and winning the 2008 golden globe for best animated film.      
+                        Wall-e was the most complex production because of the world and history that had to be conveyed. Whereas most pixard products have 75.000 storyboardsm Wall-e had 125.000. Pixar studied chernobyl and city of sofia to crate a perfeckt ruined world.
+                </div>
+            </div>
+            <div>
+        <div class="topnav4">
                 <a href="index.html">HOME</a>
                 <a href="index2.html">INFO</a>
                 <a href="index3.html">CAST</a>
                 <a href="index4.html">MORE</a>
         </div>
+        <div class="making">
+            <h4 class="about-h1">MAKING THE MOVIE</h4>
+            <img src="images/making.png"/>
+
+        </div>
+    </div>
     </div>
 </body>
 
