--- a/index2.html
+++ b/index2.html
@@ -22,10 +22,10 @@
     </div>
     <div>
     <div class="topnav4">
-            <a href="index.html">HOME</a>
+            <a href="index.html"class="otherpage">HOME</a>
             <a href="index2.html">INFO</a>
-            <a href="index3.html">CAST</a>
-            <a href="index4.html">MORE</a>
+            <a href="index3.html"class="otherpage">CAST</a>
+            <a href="index4.html"class="otherpage">MORE</a>
     </div>
     <div class="making">
         <h4 class="about-h1">MAKING THE MOVIE</h4>
