--- a/index3.html
+++ b/index3.html
@@ -35,10 +35,10 @@
 
     <div>
     <div class="topnav2">
-        <a href="index.html">HOME</a>
-        <a href="index2.html">INFO</a>
+        <a href="index.html"class="otherpage">HOME</a>
+        <a href="index2.html"class="otherpage">INFO</a>
         <a href="index3.html">CAST</a>
-        <a href="index4.html">MORE</a>
+        <a href="index4.html"class="otherpage">MORE</a>
     </div>
                             <div class="andrew">
                                     <img src="images/Andrew.png" class="actor"/>
