--- a/index4.html
+++ b/index4.html
@@ -21,9 +21,9 @@
             </div>
             <div>
         <div class="topnav4">
-                <a href="index.html">HOME</a>
-                <a href="index2.html">INFO</a>
-                <a href="index3.html">CAST</a>
+                <a href="index.html"class="otherpage">HOME</a>
+                <a href="index2.html"class="otherpage">INFO</a>
+                <a href="index3.html"class="otherpage">CAST</a>
                 <a href="index4.html">MORE</a>
         </div>
         <div class="making">
